tests/ui/rust-2018/unresolved-asterisk-imports.stderr
error[E0432]: unresolved import `nonexistent_crate`
  --> $DIR/unresolved-asterisk-imports.rs:3:5
   |
LL | use nonexistent_crate::*;
   |     ^^^^^^^^^^^^^^^^^ use of undeclared crate or module `nonexistent_crate`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
